force-app/main/default/objects/custom_create266__c/custom_create266__c.object-meta.xml
<CustomObject>
    <label>Custom created object266</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects266</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>