force-app/main/default/objects/custom_create266__c/fields/custom_create_266field630__c.field-meta.xml
<CustomField>
    <fullName>custom_create_266field630__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 266field630</label>
    <type>Checkbox</type>
</CustomField>